Adds clickable artist/album now-playing text
Now you can click on the artist or album name in the now playing
area to automatically browse to that artist or album.

--- a/interfaces/default/templates/static/css/style.css
+++ b/interfaces/default/templates/static/css/style.css
@@ -353,6 +353,10 @@ body {
     font-weight: bold;
 }
 
+#now-playing-artist, #now-playing-album {
+    cursor: pointer;
+}
+
 #spacer {
     display: inline-block;
     width: 0px;
