--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -208,6 +208,7 @@
     <script src="static/js/jquery.tablesorter.min.js"></script>
     <script src="static/js/jquery.jplayer.min.js"></script>
     <script src="static/js/jquery.address-1.3.min.js"></script>
+    <script src="static/js/jquery.floatheader.min.js"></script>
     <script src="static/js/script.js?v=1"></script>
 
 
