--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -17,7 +17,7 @@
     <meta name="author" content="">
 
     <!--    Mobile viewport optimized: j.mp/bplateviewport -->
-    <meta name="viewport" content="width=device-width; initial-scale=1.0">
+<!--    <meta name="viewport" content="width=device-width; initial-scale=1.0"> -->
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root of your domain and delete these references -->
     <link rel="shortcut icon" href="static/images/favicon.ico">
