--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -311,11 +311,8 @@
     
     <!-- Javascript at the bottom for fast page loading -->
 
-    <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-    <script>!window.jQuery && document.write(unescape('%3Cscript src="static/js/jquery-1.4.4.min.js"%3E%3C/script%3E'))</script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
-    <script>!$.ui && document.write(unescape('%3Cscript src="static/js/jquery-ui-1.8.9.min.js"%3E%3C/script%3E'))</script>
+    <script src="static/js/jquery-1.4.4.min.js"></script>
+    <script src="static/js/jquery-ui-1.8.9.min.js"></script>
 
     <!-- jQueryUI Theme Switcher -->
     <!-- <script src="http://jqueryui.com/themeroller/themeswitchertool/"></script> -->
