Hides the jPlayer debug info

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -116,8 +116,8 @@
                             <tr name="administration" class="source" >
                                 <td class="ui-corner-all">Administration</td>
                             </tr> 
-                            <tr name="debugging" class="source" >
-                                <td class="ui-corner-all">Debugging</td>
+                            <!-- <tr name="debugging" class="source" >
+                                <td class="ui-corner-all">Debugging</td> -->
                             </tr> 
                         </tbody>
                     </table>
