Forgot to get the </tr> in the previous commit

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -117,8 +117,8 @@
                                 <td class="ui-corner-all">Administration</td>
                             </tr> 
                             <!-- <tr name="debugging" class="source" >
-                                <td class="ui-corner-all">Debugging</td> -->
-                            </tr> 
+                                <td class="ui-corner-all">Debugging</td> 
+                            </tr> -->
                         </tbody>
                     </table>
                 </div>
