Re-enables the jQueryUI Theme Switcher Widget
They unbroke it. Yay!

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -315,7 +315,7 @@
     <script src="static/js/jquery-ui-1.8.9.min.js"></script>
 
     <!-- jQueryUI Theme Switcher -->
-    <!-- <script src="http://jqueryui.com/themeroller/themeswitchertool/"></script> -->
+    <script src="http://jqueryui.com/themeroller/themeswitchertool/"></script>
 
     <!-- Try to detect IE8 Compatibility Mode and notify the user they need to
     change their settings because that will render this site in a horribly 
