--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -116,9 +116,9 @@
                             <tr name="administration" class="source" >
                                 <td class="ui-corner-all">Administration</td>
                             </tr> 
-                            <!-- <tr name="debugging" class="source" >
+                            <tr name="debugging" class="source" >
                                 <td class="ui-corner-all">Debugging</td> 
-                            </tr> -->
+                            </tr> 
                         </tbody>
                     </table>
                 </div>
@@ -208,8 +208,26 @@
                                 </div>
                                 <div class="option">
                                     <input id="html5-audio" type="checkbox">
-                                    <label for="html5-audio">Try to use HTML5 audio</label>
-                                    <div><em>Currently using <span id="player-type"></span></em></div>
+                                    <label for="html5-audio">Prefer HTML5 &lt;audio&gt; over Flash</label>
+                                </div>
+                                <div class="option">
+                                    <h3>Playback solutions</h3>
+                                    <ul id="jplayer-solutions">
+                                        <li>HTML5
+                                            <ul class="html">
+                                            <li>Available: <span class="available"></span></li>
+                                            <li>Preferred: <span class="preferred"></span></li>
+                                            <li>Used: <span class="used"></span></li>
+                                            <li>Formats: <span class="formats"></span></li>
+                                        </ul></li>
+                                        <li>Flash
+                                            <ul class="flash">
+                                            <li>Available: <span class="available"></span></li>
+                                            <li>Preferred: <span class="preferred"></span></li>
+                                            <li>Used: <span class="used"></span></li>
+                                            <li>Formats: <span class="formats"></span></li>
+                                        </ul></li>
+                                    </ul>
                                 </div>
                                 <div class="option">
                                     <div id="switcher"></div>
