Adds some nice jPlayer info

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -211,6 +211,9 @@
                                     <label for="html5-audio">Prefer HTML5 &lt;audio&gt; over Flash</label>
                                 </div>
                                 <div class="option">
+                                    <button id="apply-player-prefs-button">Apply</button> (will interrupt playback)
+                                </div>
+                                <div class="option">
                                     <h3>Playback solutions</h3>
                                     <ul id="jplayer-solutions">
                                         <li>HTML5
@@ -287,6 +290,7 @@
                         </thead>
                         <tbody>
                             <tr><td>
+                                <div id="jplayer-events"></div>
                                 <ul id="jplayer-inspector"></ul>
                             </td></tr>
                         </tbody>
