--- a/interfaces/default/templates/static/css/style.css
+++ b/interfaces/default/templates/static/css/style.css
@@ -240,7 +240,7 @@ body {
 }
 
 #splash-background {
-    background: black;
+    background: white;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -251,12 +251,12 @@ body {
 
 #splash-text {
     background-image: url('../images/logo.png');
-    width: 300px;
-    height: 70px;
+    width: 455px;
+    height: 331px;
     position: absolute;
     top: 50%;
     left: 50%;
-    margin: -35px 0 0 -150px;
+    margin: -165px 0 0 -227px;
     z-index: 99;
 }
 
