Hook up web UI for adding a user

--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -361,6 +361,14 @@
                         <input type="text" id="new-user-password" name="new-user-password">
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <label for="new-user-admin">Admin</label>
+                    </td>
+                    <td>
+                        <input type="checkbox" id="new-user-admin" name="new-user-admin">
+                    </td>
+                </tr>
             </table>
         </fieldset></form>
     </div>
