--- a/interfaces/mobile/templates/index.tmpl
+++ b/interfaces/mobile/templates/index.tmpl
@@ -12,6 +12,17 @@
 </head> 
 <body> 
 
+<div data-role="page" id="Home">
+
+	<div data-role="header">
+		<h1>Blofeld</h1>
+	</div>
+
+	<div data-role="content">
+		<p><a href="#Artists">Load the artist list</a></p>
+	</div>
+</div>
+
 <div data-role="page" id="Artists">
 
 	<div data-role="header" data-position="fixed">
@@ -28,7 +39,7 @@
 <div data-role="page" id="Albums">
 
 	<div data-role="header" data-position="fixed">
-		<h1>Albums</h1>
+		<a href="#Artists" data-direction="reverse" data-icon="back">Artists</a><h1>Albums</h1>
 	</div><!-- /header -->
 
 	<div data-role="content" id="Albums-content">	
