--- a/interfaces/mobile/templates/index.tmpl
+++ b/interfaces/mobile/templates/index.tmpl
@@ -4,63 +4,39 @@
 	<title>Blofeld</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+	<link rel="stylesheet" href="static/css/style.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
-    <script type="text/javascript" src="static/js/jqm.page.params.js"></script>
-    <script type="text/javascript" src="static/js/jquery.blofeld.js"></script>
-    <script type="text/javascript" src="static/js/script.js"></script>
+	<script type="text/javascript" src="static/js/jquery.jplayer.min.js"></script>
+	<script type="text/javascript" src="static/js/jquery.jplayer.inspector.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.js"></script>
+	<script type="text/javascript" src="static/js/jqm.page.params.js"></script>
+
+	<script type="text/javascript" src="static/js/jquery.blofeld.js"></script>
+	<script type="text/javascript" src="static/js/script.js"></script>
+
 </head> 
 <body> 
+<div id="jplayer"></div>
+<div data-role="page" data-theme="a" id="home">
 
-<div data-role="page" id="Home">
-
-	<div data-role="header">
+	<div data-role="header" data-position="fixed">
 		<h1>Blofeld</h1>
 	</div>
 
-	<div data-role="content">
-		<p><a href="#Artists">Load the artist list</a></p>
+	<div data-role="content" id="home-content">
+		
 	</div>
 </div>
 
-<div data-role="page" id="Artists">
+<div data-role="page" data-theme="a" id="player">
+	<div data-role="content" id="player-content">
+		<p id="play-time-current"></p>
+		<div id="inspector"></div>
+	</div>
+</div>
 
-	<div data-role="header" data-position="fixed">
-		<h1>Artists</h1>
-	</div><!-- /header -->
 
-	<div data-role="content" id="Artists-content">	
-		<ul data-role="listview" id="Artists-list" data-filter="true" data-filter-placeholder="Search Artists...">
-        </ul>
-	</div><!-- /content -->
 
-</div><!-- /page -->
-
-<div data-role="page" id="Albums">
-
-	<div data-role="header" data-position="fixed">
-		<a href="#Artists" data-direction="reverse" data-icon="back">Artists</a><h1>Albums</h1>
-	</div><!-- /header -->
-
-	<div data-role="content" id="Albums-content">	
-		<ul data-role="listview" id="Albums-list" data-filter="true" data-filter-placeholder="Search Albums...">
-        </ul>
-	</div><!-- /content -->
-
-</div><!-- /page -->
-
-<div data-role="page" id="Songs">
-
-	<div data-role="header" data-position="fixed">
-		<h1>Songs</h1>
-	</div><!-- /header -->
-
-	<div data-role="content" id="Songs-content">	
-		<ul data-role="listview" id="Songs-list" data-filter="true" data-filter-placeholder="Search songs...">
-        </ul>
-	</div><!-- /content -->
-
-</div><!-- /page -->
 
 </body>
 </html>
