--- a/interfaces/mobile/templates/list_songs.tmpl
+++ b/interfaces/mobile/templates/list_songs.tmpl
@@ -1,33 +1,21 @@
-                <div class="scrolling-container">
-                    <table id="songs">
-                        <thead class="ui-widget-header ui-corner-all">
-                            <tr class="song">
-                                <th class="status ui-corner-left"></th>
-                                <th class="track-number"><span>#</span><div class="ui-icon sort-status"></div></th>
-                                <th class="title"><span>Title</span><div class="ui-icon sort-status"></div></th>
-                                <th class="artist"><span>Artist</span><div class="ui-icon sort-status"></div></th>
-                                <th class="album"><span>Album</span><div class="ui-icon sort-status"></div></th>
-                                <th class="genre"><span>Genre</span><div class="ui-icon sort-status"></div></th>
-                                <th class="year"><span>Year</span><div class="ui-icon sort-status"></div></th>
-                                <th class="time ui-corner-right"><span>Time</span><div class="ui-icon sort-status"></div></th>
-                            </tr>
-                        </thead>
-                        <tbody>
+<div data-role="page" data-theme="a" data-url="#songs?albums=$albums.keys[0]&artists=$artists.keys[0]" id="songs">
+    <div data-role="header" data-position="fixed">
+        <a href="#artists" data-role="button" data-icon="home" data-direction="reverse">All Artists</a>
+        <a href="#albums?artists=$artists.keys[0]" data-role="button" data-icon="arrow-l" data-direction="reverse">$artists.values[0]</a>
+        <h1>$albums.values[0]</h1>
+
+    </div>
+
+    <div data-role="content" id="songs-content">	
+        <ol data-role="listview" id="songs-list" data-filter="true" data-filter-placeholder="Search Songs...">
 #for $song in $songs
-                            <tr class="song" id="$song['id']">
-                                <td class="status ui-corner-left"><div class="status-icon"></div></td>
-                                <td class="track-number">#try#$song['tracknumber']#except# #end try#</td>
-                                <td class="title">#try#$song['title']#except#Unknown Title#end try#</td>
-                                <td class="artist">#try#$song['artist']#except#Unknown Artist#end try#</td>
-                                <td class="album">#try#$song['album']#except#Unknown Album#end try#</td>
-                                <td class="genre">#try##echo ', '.join($song['genre'])##except# #end try#</td>
-                                <td class="year">#try##echo $song['date'][:4] ##except# #end try#</td>
-                                <td class="time ui-corner-right">#try#
+            <li>
+                <img src="get_cover?albumid=$song['album_hash']&size=40" class="li-albumart"/>
+                <a href="#player?songid=$song['id']">#try#$song['title']#except#unknown title#end try#<p class="ui-li-aside">#try#
                                 #echo '%d:%02d' % ($song['length'] / 60, $song['length'] % 60)#
                                 #except# 
-                                #end try#</td>
-                            </tr>
+                                #end try#&nbsp;</p></a></li>
 #end for
-                        </tbody>
-                    </table>
-                </div>
+        </ol>
+    </div>
+</div>
