--- a/interfaces/mobile/templates/list_albums.tmpl
+++ b/interfaces/mobile/templates/list_albums.tmpl
@@ -1,6 +1,5 @@
-<div data-role="page" data-theme="a" data-url="#albums?artists=$artists.keys[0]" id="albums">
-    <div data-role="header" data-position="fixed">
-        <a href="#artists" data-role="button" data-icon="home">All Artists</a>
+<div data-role="page" data-theme="a" data-url="#albums?artists=$artists.keys[0]" id="albums" data-add-back-btn="true">
+    <div data-role="header" data-position="fixed" >
         <h1>$artists.values[0]</h1>
 
     </div>
