Adds info for the currently playing song

--- a/interfaces/mobile/templates/index.tmpl
+++ b/interfaces/mobile/templates/index.tmpl
@@ -35,7 +35,10 @@
 	</div>
 	<div class="big-cover"><img src="" /></div>
 	<div data-role="content">
-		<p><span class="jp-current-time"></span> / <span class="jp-duration"></span></p>
+		<h2 class="title">Song Title</h2>
+		<h4 class="artist">Artist Name</h4>
+		<p class="album">Album Title</p>
+		<p><span class="jp-current-time"></span> / <span class="duration"></span></p>
 	</div>
 	<div data-role="footer" data-id="playercontrols" data-position="fixed">
 		<h4>
