--- a/interfaces/default/templates/list_songs.tmpl
+++ b/interfaces/default/templates/list_songs.tmpl
@@ -3,6 +3,9 @@
                         <thead class="ui-widget-header ui-corner-all">
                             <tr class="song">
                                 <th class="status ui-corner-left"></th>
+                                <th class="albumartist hidden"></th>
+                                <th class="replaygain_album_gain hidden"></th>
+                                <th class="replaygain_track_gain hidden"></th>
                                 <th class="track-number"><span>#</span><div class="ui-icon sort-status"></div></th>
                                 <th class="title"><span>Title</span><div class="ui-icon sort-status"></div></th>
                                 <th class="artist"><span>Artist</span><div class="ui-icon sort-status"></div></th>
@@ -16,7 +19,10 @@
 #for $song in $songs
                             <tr class="song" id="$song['id']">
                                 <td class="status ui-corner-left"><div class="status-icon"></div></td>
-                                <td class="track-number">#try#$song['tracknumber']#except# #end try#</td>
+                                <td class="albumartist hidden">#try#$song['albumnumber']#except##try#$song['artist']#except#Unknown Artist#end try##end try#</td>
+                                <td class="replaygain_album_gain hidden">#try#$song['replaygain_album_gain'][:-3]#except#-10.0#end try#</td>
+                                <td class="replaygain_track_gain hidden">#try#$song['replaygain_track_gain'][:-3]#except#-10.0#end try#</td>
+                                <td class="track-number">#try##if $song['totaldiscs']>1#$song['discnumber']-#end if##except# #end try##try#$song['tracknumber']#except# #end try#</td>
                                 <td class="title">#try#$song['title']#except#Unknown Title#end try#</td>
                                 <td class="artist">#try#$song['artist']#except#Unknown Artist#end try#</td>
                                 <td class="album">#try#$song['album']#except#Unknown Album#end try#</td>
