--- a/interfaces/default/templates/index.tmpl
+++ b/interfaces/default/templates/index.tmpl
@@ -211,12 +211,12 @@
                                     <label for="enable-replaygain">Enable ReplayGain</label>
                                 </div>
                                 <div class="option">
-                                    <input name="replaygain" value="album" type="radio">
-                                    <label for="replaygain">Use album level gain</label>
+                                    <input id="rg-album" name="replaygain" value="album" type="radio">
+                                    <label for="rg-album">Use album level gain</label>
                                 </div>
                                 <div class="option">
-                                    <input name="replaygain" value="track" type="radio">
-                                    <label for="replaygain">Use track level gain</label>
+                                    <input id="rg-track" name="replaygain" value="track" type="radio" checked="true">
+                                    <label for="rg-track">Use track level gain</label>
                                 </div>
                                 <div class="option">
                                     <div id="default-loudness"></div>
